style: pdf groups overflow issue fix

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -3,6 +3,7 @@
   max-width: 25rem;
   border-right: 1px solid var(--secondary-color);
   height: 100%;
+  overflow: auto;
   padding: 1.6rem;
 }
 
